[gd_scene load_steps=24 format=3 uid="uid://ccqg5v6n6851q"]

[ext_resource type="Script" path="res://scripts/character_movement.gd" id="1_2nvis"]
[ext_resource type="Texture2D" uid="uid://bmtr8ljnf5e7q" path="res://Assets/Animation Tilesets/Animated Tileset - Player.png" id="2_v0bby"]
[ext_resource type="AudioStream" uid="uid://dqsc3xljl6q1h" path="res://Assets/SFX/Dash.wav" id="3_s6ij4"]
[ext_resource type="AudioStream" uid="uid://celnemwqmdqwt" path="res://Assets/SFX/Shoot.wav" id="4_eogat"]
[ext_resource type="AudioStream" uid="uid://bqrobmnjh2va" path="res://Assets/SFX/jump.wav" id="5_fikxl"]
[ext_resource type="AudioStream" uid="uid://fv4v8ldnpr86" path="res://Assets/SFX/footsteps.wav" id="6_3t7nq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fmcox"]
atlas = ExtResource("2_v0bby")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wj63"]
atlas = ExtResource("2_v0bby")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4lxb"]
atlas = ExtResource("2_v0bby")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rghyp"]
atlas = ExtResource("2_v0bby")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pmp7"]
atlas = ExtResource("2_v0bby")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_23dj7"]
atlas = ExtResource("2_v0bby")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8tsa"]
atlas = ExtResource("2_v0bby")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4uxj"]
atlas = ExtResource("2_v0bby")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmxlk"]
atlas = ExtResource("2_v0bby")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jnem"]
atlas = ExtResource("2_v0bby")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hat4"]
atlas = ExtResource("2_v0bby")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1tx3"]
atlas = ExtResource("2_v0bby")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a3qg"]
atlas = ExtResource("2_v0bby")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn61f"]
atlas = ExtResource("2_v0bby")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gm2kt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmcox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wj63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4lxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rghyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rghyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wj63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmcox")
}],
"loop": true,
"name": &"dash",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pmp7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23dj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8tsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4uxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmxlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jnem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hat4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1tx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a3qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn61f")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rahtq"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n4a6p"]
radius = 1.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -10)
script = ExtResource("1_2nvis")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_gm2kt")
offset = Vector2(-7.025, -8.075)

[node name="Marker2D" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(10, 1)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_rahtq")
debug_color = Color(0.753221, 0.457376, 0, 0.42)

[node name="CenterCollision" type="Area2D" parent="."]
position = Vector2(0, 4)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterCollision"]
shape = SubResource("CircleShape2D_n4a6p")

[node name="jumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="coyoteTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="shootCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="grappleLength" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="variableJump" type="Timer" parent="."]

[node name="grappleCooldown" type="Timer" parent="."]
one_shot = true

[node name="Dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_s6ij4")
volume_db = -10.12

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_eogat")
volume_db = -10.12

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fikxl")
volume_db = -10.12

[node name="footsteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_3t7nq")
volume_db = -10.12
